--- a/index.html
+++ b/index.html
@@ -21,9 +21,33 @@
         }
     </style>
 </head>
-<body>
+<body onload="hide()">
     <div class="center" id="while-load">
         <h3 class="text-success"><span class="spinner-grow text-success"></span> Page Loading</h3>
     </div>
+    <div>
+        <div class="container-fluid">
+            <br>
+            <h3>Working</h3>
+            <p>mememememememeemme</p>
+        </div>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+            <a class="navbar-brand" href="/">FlukeJessada.Github.io</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/me">Abort.Me</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
+<script>
+    function hide() {
+        var x = document.getElementById("while-load");
+        x.style.display = "none";
+    }
+</script>
 </html>
