--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <title>Fluke_Jessada</title>
+    <title>FlukeJessada</title>
     <style>
         .center {
             position: absolute;
@@ -17,7 +19,41 @@
             top: 50%;
             width: 100%;
             text-align: center;
-            font-size: 18px;
+        }
+        .header {
+            background-color: rgba(255, 178, 34, 0.5);
+            padding-top: 90px;
+        }
+        a.header:link {
+            color: rgb(0, 0, 0);
+            text-decoration: none;
+        }
+        a.header:visited {
+            color: rgb(0, 0, 0);
+            text-decoration: none;
+        }
+        a.header:hover {
+            color: rgb(88, 69, 15);
+            text-decoration: none;
+        }
+        a.header:active {
+            color: rgb(0, 0, 0);
+            text-decoration: none;
+        }
+        a.footer:link {
+            font-size: 2em;
+            color: rgb(255, 177, 75);
+        }
+        a.footer:visited {
+            color: rgb(255, 177, 75);
+        }
+        
+        a.footer:hover {
+            color: rgb(192, 143, 78);
+            text-decoration: none;
+        }
+        a.footer:active {
+            color: rgb(255, 177, 75);
         }
     </style>
 </head>
@@ -25,23 +61,89 @@
     <div class="center" id="while-load">
         <h3 class="text-success"><span class="spinner-grow text-success"></span> Page Loading</h3>
     </div>
-    <div>
-        <div class="container-fluid">
-            <br>
-            <h3>Working</h3>
-            <p>mememememememeemme</p>
+    <div class="header">
+        <div class="container">
+            <a class="header" href="/"><h3>FlukeJessada.Github.io</h3></a>
         </div>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-            <a class="navbar-brand" href="/">FlukeJessada.Github.io</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/blog">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/me">Abort.Me</a>
-                </li>
-            </ul>
+            <div class="container">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/me">Abort.Me</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
+    </div>
+    <div class="container" style="margin-top:30px">
+        <div class="row">
+            <div class="col-4">
+                <div class="card" style="width:100%">
+                    <img class="card-img-top" src="images/me.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">Fluke Jessada</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="/me" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-8">
+                <div class="card" id="hotline-1">
+                    <div class="card-body">
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                    </div>
+                </div>
+                <br>
+                <div class="card" id="hotline-2">
+                    <div class="card-body">
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco.
+                    </div>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="jumbotron text-center" style="margin-bottom:0; background-color:rgba(255, 178, 34, 0.5);">
+        <a href="https://github.com/flukejessada" target="_blank" class="footer">
+            <i class="fab fa-github-alt"></i>
+        </a>
+        &ThickSpace;
+        <a href="https://twitter.com/FlukeJessada" target="_blank" class="footer">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <br>
+        <p>Made with ❤️ by FlukeJessada</p>
     </div>
 </body>
 <script>
@@ -49,5 +151,11 @@
         var x = document.getElementById("while-load");
         x.style.display = "none";
     }
+
+    var nodeArray = [
+        document.querySelector('#hotline-1'),
+        document.querySelector('#hotline-2')
+    ];
+    ScrollReveal().reveal(nodeArray, { delay: 500 });
 </script>
 </html>
