--- a/index.html
+++ b/index.html
@@ -9,51 +9,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/me-nxz.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>FlukeJessada</title>
     <style>
-        .center {
-            position: absolute;
-            left: 0;
-            top: 50%;
+        * {
+            box-sizing: border-box;
+        }
+        .me-row::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
+        [class*="me-col-"] {
+            float: left;
+            padding: 15px;
+        }
+        [class*="me-col-"] {
             width: 100%;
-            text-align: center;
         }
-        .header {
-            background-color: rgba(255, 178, 34, 0.5);
-            padding-top: 90px;
+        @media only screen and (min-width: 600px) {
+            .me-col-s-profile {width: 25%;}
+            .me-col-s-body {width: 75%;}
         }
-        a.header:link {
-            color: rgb(0, 0, 0);
-            text-decoration: none;
-        }
-        a.header:visited {
-            color: rgb(0, 0, 0);
-            text-decoration: none;
-        }
-        a.header:hover {
-            color: rgb(88, 69, 15);
-            text-decoration: none;
-        }
-        a.header:active {
-            color: rgb(0, 0, 0);
-            text-decoration: none;
-        }
-        a.footer:link {
-            font-size: 2em;
-            color: rgb(255, 177, 75);
-        }
-        a.footer:visited {
-            color: rgb(255, 177, 75);
-        }
-        
-        a.footer:hover {
-            color: rgb(192, 143, 78);
-            text-decoration: none;
-        }
-        a.footer:active {
-            color: rgb(255, 177, 75);
+        @media only screen and (min-width: 768px) {
+            .me-col-profile {width: 25%;}
+            .me-col-body {width: 75%;}
         }
     </style>
 </head>
@@ -65,7 +47,7 @@
         <div class="container">
             <a class="header" href="/"><h3>FlukeJessada.Github.io</h3></a>
         </div>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-sm navbar-light sticky-top" style="background: #ffb300;">
             <div class="container">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -79,18 +61,8 @@
         </nav>
     </div>
     <div class="container" style="margin-top:30px">
-        <div class="row">
-            <div class="col-4">
-                <div class="card" style="width:100%">
-                    <img class="card-img-top" src="images/me.png" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Fluke Jessada</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="/me" class="btn btn-primary">See Profile</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-8">
+        <div class="me-row">
+            <div class="me-col-body me-col-s-body">
                 <div class="card" id="hotline-1">
                     <div class="card-body">
                         Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
@@ -132,18 +104,30 @@
                 </div>
                 <br>
             </div>
+            <div class="me-col-profile me-col-s-profile">
+                <div class="card" id="me" style="width:100%">
+                    <img class="card-img-top" src="images/me.webp" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">Fluke Jessada</h4>
+                        <p class="card-text">Just a lazy guy that wrote code.</p>
+                        <a href="/me" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="jumbotron text-center" style="margin-bottom:0; background-color:rgba(255, 178, 34, 0.5);">
-        <a href="https://github.com/flukejessada" target="_blank" class="footer">
-            <i class="fab fa-github-alt"></i>
-        </a>
-        &ThickSpace;
-        <a href="https://twitter.com/FlukeJessada" target="_blank" class="footer">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <br>
-        <p>Made with ❤️ by FlukeJessada</p>
+    <div class="jumbotron" style="margin-bottom:0; background-color:#ffecb3;">
+        <div class="text-right">
+            <p>Made with ❤️ by FlukeJessada</p>
+            <a href="https://github.com/flukejessada" target="_blank" class="footer">
+                <i class="fab fa-github-alt"></i>
+            </a>
+            &ThickSpace;
+            <a href="https://twitter.com/FlukeJessada" target="_blank" class="footer">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+        
     </div>
 </body>
 <script>
@@ -154,7 +138,8 @@
 
     var nodeArray = [
         document.querySelector('#hotline-1'),
-        document.querySelector('#hotline-2')
+        document.querySelector('#hotline-2'),
+        document.querySelector('#me')
     ];
     ScrollReveal().reveal(nodeArray, { delay: 500 });
 </script>
