--- a/index.html
+++ b/index.html
@@ -2,145 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="FlukeJessada">
+    <meta name="keywords" content="profile">
+    <meta name="description" content="FlukeJessada's Personal Website">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="css/me-nxz.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../css/me-nxz.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>FlukeJessada</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        .me-row::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-        [class*="me-col-"] {
-            float: left;
-            padding: 15px;
-        }
-        [class*="me-col-"] {
-            width: 100%;
-        }
-        @media only screen and (min-width: 600px) {
-            .me-col-s-profile {width: 25%;}
-            .me-col-s-body {width: 75%;}
-        }
-        @media only screen and (min-width: 768px) {
-            .me-col-profile {width: 25%;}
-            .me-col-body {width: 75%;}
-        }
-    </style>
 </head>
-<body onload="hide()">
-    <div class="center" id="while-load">
-        <h3 class="text-success"><span class="spinner-grow text-success"></span> Page Loading</h3>
-    </div>
-    <div class="header">
+<body>
+    <header>
+    </header>
+    <section class="banner-area">
+        <div class="overlay overlay-bg"></div>
         <div class="container">
-            <a class="header" href="/"><h3>FlukeJessada.Github.io</h3></a>
-        </div>
-        <nav class="navbar navbar-expand-sm navbar-light sticky-top" style="background: #ffb300;">
-            <div class="container">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/me">Abort.Me</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div class="container" style="margin-top:30px">
-        <div class="me-row">
-            <div class="me-col-body me-col-s-body">
-                <div class="card" id="hotline-1">
-                    <div class="card-body">
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                    </div>
-                </div>
-                <br>
-                <div class="card" id="hotline-2">
-                    <div class="card-body">
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                        Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco.
-                    </div>
-                </div>
-                <br>
-            </div>
-            <div class="me-col-profile me-col-s-profile">
-                <div class="card" id="me" style="width:100%">
-                    <img class="card-img-top" src="images/me.webp" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Fluke Jessada</h4>
-                        <p class="card-text">Just a lazy guy that wrote code.</p>
-                        <a href="/me" class="btn btn-primary">See Profile</a>
-                    </div>
-                </div>
+            <div class="centered">
+                <h1 class="text-white">Fluke Jessada</h1>
+                <p class="text-white">I'm Developer and I want a Coffee.</p>
             </div>
         </div>
-    </div>
-    <div class="jumbotron" style="margin-bottom:0; background-color:#ffecb3;">
-        <div class="text-right">
-            <p>Made with ❤️ by FlukeJessada</p>
-            <a href="https://github.com/flukejessada" target="_blank" class="footer">
-                <i class="fab fa-github-alt"></i>
-            </a>
-            &ThickSpace;
-            <a href="https://twitter.com/FlukeJessada" target="_blank" class="footer">
-                <i class="fab fa-twitter"></i>
-            </a>
-        </div>
-        
-    </div>
+    </section>
+    <section>
+    </section>
 </body>
-<script>
-    function hide() {
-        var x = document.getElementById("while-load");
-        x.style.display = "none";
-    }
-
-    var nodeArray = [
-        document.querySelector('#hotline-1'),
-        document.querySelector('#hotline-2'),
-        document.querySelector('#me')
-    ];
-    ScrollReveal().reveal(nodeArray, { delay: 500 });
-</script>
 </html>
