--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
     </section>
     <section>
     </section>
+    <footer class="jumbotron" style="margin-bottom:0; background-color:#ffecb3;">
+        <div class="text-right">
+            <a href="https://github.com/flukejessada" target="_blank" class="footer">
+                <i class="fab fa-github-alt"></i>
+            </a>
+            &ThickSpace;
+            <a href="https://twitter.com/FlukeJessada" target="_blank" class="footer">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <p>Made with ❤️ by FlukeJessada</p>
+        </div> 
+    </footer>
 </body>
 </html>
