Update desktop view.

--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     <div id="bg"></div>
     <div id="deb"></div>
     <header>
-        <h1 id="spec" class="glitch" data-text="FlukeJessada">FlukeJessada</h1>
+        
     </header>
     <main>
-        <section>
+        <section id="main">
+            <h1 id="spec" class="glitch" data-text="FlukeJessada">FlukeJessada</h1>
             <p id="subhead">
                 I am 
                 <span class="typewrite" data-period="1000" 
                 data-type='[ "LAZY.", "Gamer.", "Creative.", "Developer." ]'></span>
                 <span class="wrap"></span>
             </p>
-        </section>
-        <section id="wrapper">
             <div style="padding-top: 30px"></div>
-            <a href="/me" id="btn">See me more</a>
+            <div id="wrapper"><a href="/me" id="btn">See me more</a></div>
         </section>
     </main>
     <!-- <p>Made with ❤️ by FlukeJessada</p> -->
