Add nav bar, Imcomplete need to improve more.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
             <div style="padding-top: 30px"></div>
             <div id="wrapper"><a href="/me" id="btn">See me more</a></div>
         </section>
+        <section id="nav">
+            <ul>
+                <li><a href="/game">Game</a></li>
+                <li><a href="/devblog">DevBlog</a></li>
+                <li><a href="https://github.com/flukejessada">GitHub</a></li>
+                <li><a href="https://twitter.com/FlukeJessada">Twitter</a></li>
+            </ul>
+        </section>
     </main>
     <!-- <p>Made with ❤️ by FlukeJessada</p> -->
 </html>
