--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FlukeJessada</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
     </header>
     <main>
         <section id="main">
-            <h1 id="spec" class="glitch" data-text="FlukeJessada">FlukeJessada</h1>
+            <h1 id="spec" class="glitch">FlukeJessada</h1>
             <p id="subhead">
                 I am 
                 <span class="typewrite" data-period="1000" 
@@ -29,12 +30,26 @@
             <div id="wrapper"><a href="/me" id="btn">See me more</a></div>
         </section>
         <section id="nav">
+            <div>
             <ul>
-                <li><a href="/game">Game</a></li>
-                <li><a href="/devblog">DevBlog</a></li>
-                <li><a href="https://github.com/flukejessada">GitHub</a></li>
-                <li><a href="https://twitter.com/FlukeJessada">Twitter</a></li>
+                <li><a href="/game">
+                    <span><i class="fas fa-gamepad"></i></span>
+                    Game
+                </a></li>
+                <li><a href="/devblog">
+                    <span><i class="fab fa-dev"></i></span>
+                    DevBlog
+                </a></li>
+                <li><a href="https://github.com/flukejessada">
+                    <span><i class="fab fa-github-square"></i></span>
+                    GitHub
+                </a></li>
+                <li><a href="https://twitter.com/FlukeJessada">
+                    <span><i class="fab fa-twitter-square"></i></span>
+                    Twitter
+                </a></li>
             </ul>
+            </div>
         </section>
     </main>
     <!-- <p>Made with ❤️ by FlukeJessada</p> -->
