Minor Change. Style and page.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section id="main">
-            <h1 id="spec" class="glitch">FlukeJessada</h1>
+            <h1 id="spec" class="glitch">Crazy_J<br><span>FlukeJessada</span></h1>
             <p id="subhead">
                 I am 
                 <span class="typewrite" data-period="1000" 
