--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</li>
 
 			<li class="nav-item">
-				<a href="#" class="nav-link">
+				<a href="#main" class="nav-link">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
 						<defs>
 							<style>
@@ -86,7 +86,7 @@
                 <span class="wrap"></span>
             </p>
             <div style="padding-top: 30px"></div>
-            <div id="wrapper"><a href="/me" id="btn">See me more</a></div>
+            <div id="wrapper"><a href="https://github.com/FlukeJessada" id="btn">See me more</a></div>
         </section>
     </main>
     <!-- <p>Made with ❤️ by FlukeJessada</p> -->
